# recipe-scraper-service

./: .bandit  .conventionalcommits.json  .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .gitmessage  .hadolint.yaml  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc  .pydoclint.ini  .pytest.ini  .secrets.baseline  .spectral.yaml  .yamllint.yaml  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  SECURITY.md  allure.properties  commitlint.config.js  docker-compose.yml  hypothesis.json  openapi.yaml  pyproject.toml  recipe-management-openapi.yaml
.beads/: metadata.json
.claude/plans/: recommendations-shopping.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  codeql.yml  dependabot.yml  labeler.yml  pull_request_template.md  renovate.json5
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml  performance_issue.yml  security_issue.md  security_vulnerability.yml  task.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: build.yaml  ci.yaml  ci.yml  cleanup.yml  codeql.yml  coverage.yml  dependabot-auto-merge.yml  deploy.yml  docs.yaml  greet.yml  license-check.yml  links.yml  lint.yaml  lock.yml  pr-size.yml  release.yml  security.yml  stale.yml  test.yaml
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  logging.py  security.py
app/db/: __init__.py  base.py  session.py
app/enums/: __init__.py  allergen_enum.py  allergy.py  difficulty_level_enum.py  food_group_enum.py  ingredient_unit_enum.py  meal_type_enum.py  revision_category_enum.py  revision_type_enum.py
app/exceptions/: __init__.py  custom_exceptions.py  handlers.py
app/middleware/: __init__.py  logging_middleware.py  process_time_middleware.py  request_id_middleware.py  security_headers_middleware.py
app/models/: ingredient.py
app/services/: __init__.py  admin_service.py  database_monitor.py  nutritional_info_service.py  recipe_scraper_service.py  recommendations_service.py  shopping_service.py
app/utils/: __init__.py  aggregation_helpers.py  cache_manager.py  datetime.py  popular_recipe_web_scraper.py  service_token_manager.py  slugify.py  tokens.py  unit_converter.py  validators.py
config/: logging.json  oauth2.yaml  service_urls.yaml
config/base/: api.yaml  app.yaml  arq.yaml  auth.yaml  database.yaml  downstream_services.yaml  features.yaml  llm.yaml  observability.yaml  redis.yaml  scraping.yaml
config/recipe_scraping/: recipe_blog_urls.json  web_scraper.yaml
docker/prometheus/: prometheus.yml
docs/: allergen-info.md  api.md  architecture.md  configuration.md  database-integration.md  deployment.md  development.md  llm.md  nutritional-info.md  ollama-setup.md  openapi.json  openapi.yaml  popular-recipes.md  recipe-pairings.md  shopping-info.md
docs/api/: recipe-scraper-openapi.yaml
docs/processes/: recipe-scraping.md
docs/source/: app.api.rst  app.api.v1.routes.rst  app.api.v1.rst  app.api.v1.schemas.common.nutritional_info.rst  app.api.v1.schemas.common.rst  app.api.v1.schemas.downstream.auth_service.rst  app.api.v1.schemas.downstream.notification_service.rst  app.api.v1.schemas.downstream.rst  app.api.v1.schemas.downstream.spoonacular.rst  app.api.v1.schemas.downstream.user_management_service.rst  app.api.v1.schemas.request.rst  app.api.v1.schemas.response.rst  app.api.v1.schemas.rst  app.core.config.rst  app.db.models.ingredient_models.rst  app.db.models.meal_plan_models.rst  app.db.models.nutritional_info_models.rst  app.db.models.recipe_models.rst  app.db.models.rst  app.db.models.user_models.rst  app.db.rst  app.deps.rst  app.enums.rst  app.exceptions.rst  app.middleware.rst  app.models.rst  app.rst  app.schemas.common.rst  app.schemas.request.rst  app.schemas.response.rst  app.schemas.rst  app.services.downstream.rst  app.utils.rst  conf.py  index.rst  openapi.rst
k8s/: configmap-template.yaml  deployment.yaml  gateway-route.yaml  ingress.yaml  network-policy.yaml  pod-disruption-budget.yaml  secret-template.yaml  secret.yaml  service.yaml
k8s/base/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
k8s/config/: development.env.example  production.env.example  secrets.env.example  staging.env
postman/: README.md  Recipe-Scraper-Development.postman_environment.json  Recipe-Scraper-Local.postman_environment.json  Recipe-Scraper-Service-Development.postman_environment.json  Recipe-Scraper-Service-Local.postman_environment.json  Recipe-Scraper-Service.postman_collection.json
scripts/: __init__.py  entrypoint.sh  run_local.py  start-worker.sh
scripts/containerManagement/: cleanup-container.sh  deploy-container.sh  get-container-status.sh  start-container.sh  stop-container.sh  update-container.sh
scripts/python/: __init__.py  export_openapi.py  test_runner.py
scripts/shell/: build-docker.sh  cleanup-container.sh  deploy-container.sh  get-container-status.sh  run-docker.sh  start-container.sh  stop-container.sh  update-container.sh
src/app/: __init__.py  factory.py  main.py
tests/: __init__.py  conftest.py  run_unit_tests.py
tests/component/: __init__.py
tests/dependency/: __init__.py
tests/e2e/: conftest.py  test_admin_cache_e2e.py  test_allergen_e2e.py  test_auth_flow.py  test_auth_providers.py  test_background_jobs.py  test_ingredient_substitutions_e2e.py  test_ingredients_endpoint.py  test_metrics_endpoint.py  test_nutritional_info_e2e.py  test_popular_recipes_endpoint.py  test_recipe_pairings_e2e.py  test_recipes_endpoint.py  test_root_endpoint.py
tests/factories/: __init__.py  allergen.py  auth.py  conftest.py  settings.py
tests/fixtures/: llm_responses.py
tests/http/: admin.http  health.http  nutritional_info.http  recipes.http  recommendations.http
tests/integration/: conftest.py  (+11 more)
(+461 files in other folders)
