[tool.poetry]
packages = [{ include = "app", from = "src" }, { include = "scripts" }]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "recipe-scraper-service"
version = "0.1.0"
description = "Enterprise-grade FastAPI recipe scraping service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<4.0"
authors = [{ name = "jsamuelsen" }]
keywords = ["fastapi", "async", "api", "recipes", "scraping"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Typing :: Typed",
]

dependencies = [
  # Core Framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=23.0.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  # Authentication
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.18",
  # Caching & Redis
  "redis>=5.2.0",
  "hiredis>=3.1.0",
  # Background Jobs
  "arq>=0.26.1",
  # Rate Limiting
  "slowapi>=0.1.9",
  # Observability
  "loguru>=0.7.3",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "opentelemetry-api>=1.28.0",
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-redis>=0.49b0",
  "opentelemetry-exporter-otlp>=1.28.0",
  # Utilities
  "httpx>=0.28.0",
  "orjson>=3.10.0",
  "email-validator>=2.2.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.5.0",
  "pytest-timeout>=2.3.0",
  "pytest-benchmark>=5.1.0",
  "httpx>=0.28.0",
  "polyfactory>=2.18.0",
  "hypothesis>=6.120.0",
  "freezegun>=1.4.0",
  "respx>=0.22.0",
  "testcontainers[redis]>=4.8.0",
  # Code Quality
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  # Security
  "bandit[toml]>=1.8.0",
  "pip-audit>=2.7.0",
  # Pre-commit
  "pre-commit>=4.0.0",
  # Type stubs
  "types-redis>=4.6.0",
  "types-python-jose>=3.3.0",
  "types-passlib>=1.7.0",
]

docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/jsamuelsen/recipe-scraper-service"
Documentation = "https://jsamuelsen.github.io/recipe-scraper-service"
Repository = "https://github.com/jsamuelsen/recipe-scraper-service"
Issues = "https://github.com/jsamuelsen/recipe-scraper-service/issues"
Changelog = "https://github.com/jsamuelsen/recipe-scraper-service/blob/main/CHANGELOG.md"

[project.scripts]
app = "app.main:main"
test-unit = "scripts.python.test_runner:run_unit"
test-integration = "scripts.python.test_runner:run_integration"
test-e2e = "scripts.python.test_runner:run_e2e"
test-performance = "scripts.python.test_runner:run_performance"
test-all = "scripts.python.test_runner:run_all"
test-coverage = "scripts.python.test_runner:run_coverage"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/app", "scripts"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/docs", "/scripts"]

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================

[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4
src = ["src", "tests"]
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "I",     # isort
  "N",     # pep8-naming
  "UP",    # pyupgrade
  "ANN",   # flake8-annotations
  "ASYNC", # flake8-async
  "S",     # flake8-bandit
  "B",     # flake8-bugbear
  "A",     # flake8-builtins
  "COM",   # flake8-commas
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "EM",    # flake8-errmsg
  "FA",    # flake8-future-annotations
  "ISC",   # flake8-implicit-str-concat
  "ICN",   # flake8-import-conventions
  "LOG",   # flake8-logging
  "G",     # flake8-logging-format
  "PIE",   # flake8-pie
  "T20",   # flake8-print
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "RSE",   # flake8-raise
  "RET",   # flake8-return
  "SLF",   # flake8-self
  "SLOT",  # flake8-slots
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  "ARG",   # flake8-unused-arguments
  "PTH",   # flake8-use-pathlib
  "ERA",   # eradicate
  "PL",    # Pylint
  "TRY",   # tryceratops
  "FLY",   # flynt
  "PERF",  # Perflint
  "FURB",  # refurb
  "RUF",   # Ruff-specific
]
ignore = [
  "E501",    # line too long (handled by formatter)
  "ANN401",  # dynamically typed expressions (Any)
  "S101",    # assert used (needed in tests)
  "S104",    # binding to all interfaces (intentional for containers)
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
  "COM812",  # trailing comma (conflicts with formatter)
  "ISC001",  # single line implicit string concat (conflicts with formatter)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106", "ANN", "ARG", "PLR2004", "SLF001"]
"scripts/**/*" = ["T20", "S603", "S607"]
"src/app/core/config.py" = [
  "N802", # Pydantic computed fields use UPPER_CASE
  "S105", # Settings contain placeholder secrets for development
]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
parametrize-names-type = "tuple"
parametrize-values-type = "list"
parametrize-values-row-type = "tuple"

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 50

[tool.ruff.lint.flake8-type-checking]
# Pydantic models use annotations at runtime for validation
runtime-evaluated-base-classes = [
  "pydantic.BaseModel",
  "pydantic_settings.BaseSettings",
]
# FastAPI uses get_type_hints() to resolve dependency annotations at runtime
runtime-evaluated-decorators = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Body",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.Form",
  "fastapi.File",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# mypy - Type Checking
# =============================================================================

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
no_implicit_optional = true
strict_optional = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
  "testcontainers.*",
  "polyfactory.*",
  "hypothesis.*",
  "arq.*",
  "slowapi.*",
  "prometheus_fastapi_instrumentator.*",
  "opentelemetry",
  "opentelemetry.*",
  "opentelemetry_sdk.*",
  "opentelemetry_api.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["loguru", "loguru.*"]
# Loguru uses dynamic method generation; allow untyped calls
disallow_untyped_calls = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

# =============================================================================
# pytest - Testing
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-ra", "-q", "--tb=short"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
markers = [
  "unit: Unit tests (no external dependencies)",
  "integration: Integration tests (requires database/redis)",
  "e2e: End-to-end tests (full system)",
  "performance: Performance and benchmark tests",
  "slow: Tests that take > 1 second",
]

# =============================================================================
# coverage - Code Coverage
# =============================================================================

[tool.coverage.run]
source = ["src/app"]
branch = true
parallel = true
omit = ["*/__init__.py", "*/conftest.py"]

[tool.coverage.paths]
source = ["src/app"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "\\.\\.\\.",
]
fail_under = 90
show_missing = true
skip_covered = true

# =============================================================================
# bandit - Security Linting
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]
